# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  catalog.json
.claude/: CLAUDE.md
.claude/skills/cerebras/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  chat.py  db.py  main.py  schemas.py
backend/tests/: test_auth.py  test_chat.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: ChatPanel.tsx  NdaDocument.tsx  NdaForm.tsx  NdaPdfDocument.tsx  NdaPdfDownload.tsx
frontend/src/lib/: api.ts  ndaContent.ts  types.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
